[gd_scene load_steps=3 format=3 uid="uid://cxi6yq68oypjf"]

[ext_resource type="Script" uid="uid://nk1dcdlc4c24" path="res://scenes/TD/gridT.gd" id="1_3gfx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lw4x"]
size = Vector2(87, 86)

[node name="gridTower" type="Area2D"]
collision_layer = 8
script = ExtResource("1_3gfx0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5lw4x")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
